--- a/.github/workflows/snake-neon.yml
+++ b/.github/workflows/snake-neon.yml
@@ -1,4 +1,4 @@
-name: 🌌 Generate Galaxy Snake
+name: 🕶️ Generate Neon Matrix Snake
 
 on:
   schedule:
@@ -14,20 +14,20 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: 🛸 Checkout Repository
+      - name: 🧩 Checkout repository
         uses: actions/checkout@v4
 
-      - name: 🐍 Generate Galaxy Snake Animation
+      - name: 🐍 Generate Neon Matrix Snake
         uses: Platane/snk@v3
         with:
           github_user_name: aditya-sharma-hub
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#00FFFF&color_dots=#8A2BE2,#00FFFF,#FF00FF,#FFD700
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark&color_snake=#00FFFF&color_dots=#39FF14,#00FFFF,#FF3131,#FFD700
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 🚀 Upload to GitHub Pages
+      - name: 🚀 Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
